--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -70,6 +70,8 @@
     --callout-border-rgb: 108, 108, 108;
     --card-rgb: 100, 100, 100;
     --card-border-rgb: 200, 200, 200;
+    --white-color: #f5f5f5;
+    --text-color: #191919;
   }
 }
 
@@ -86,18 +88,16 @@ body {
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  color: var(--text-color);
+  background: var(--white-color);
 }
 
 a {
   color: inherit;
   text-decoration: none;
+}
+li {
+  list-style: none;
 }
 
 @media (prefers-color-scheme: dark) {
